Add Seach and Filter
