# docs/swagger.json
@@ -131,6 +131,18 @@
                         "description": "Order 'ASC' or 'DESC'",
                         "name": "order",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search tasks by title",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Filter by status (true/false)",
+                        "name": "status",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -199,6 +211,18 @@
                         "type": "string",
                         "description": "Order 'ASC' or 'DESC'",
                         "name": "order",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search tasks by title",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Filter by status (true/false)",
+                        "name": "status",
                         "in": "query"
                     }
                 ],
